[package]
name = "bitcoin"
version = "0.19.1"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoin/"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
documentation = "https://docs.rs/bitcoin/"
description = "General purpose library for using and interoperating with Bitcoin and other cryptocurrencies."
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[lib]
name = "bitcoin"
path = "src/lib.rs"

[features]
fuzztarget = ["bitcoin_hashes/fuzztarget"]
unstable = []
use-serde = ["serde", "bitcoin_hashes/serde"]

[dependencies]
bech32 = "0.7.1"
byteorder = "1.2"
bitcoin_hashes = "0.7"
bitcoinconsensus = { version = "0.16", optional = true }
hex = "0.3"
serde = { version="1", optional = true }
serde_json = "1"
serde_derive = "1"

[dependencies.grin_secp256k1zkp]
git = "https://github.com/mwcproject/rust-secp256k1-zkp"
branch = "master"
version = "0.7.7"
features = ["bullet-proof-sizing"]

[dev-dependencies]
serde_test = "1"
