[package]
name = "bitcoin"
version = "0.26.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoin/"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
documentation = "https://docs.rs/bitcoin/"
description = "General purpose library for using and interoperating with Bitcoin and other cryptocurrencies."
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"


[features]
base64 = [ "base64-compat" ]
fuzztarget = ["bitcoin_hashes/fuzztarget"]
unstable = []
use-serde = ["serde", "bitcoin_hashes/serde" ]

[dependencies]
bech32 = "0.7.2"
bitcoin_hashes = "0.9.1"

base64-compat = { version = "1.0.0", optional = true }
bitcoinconsensus = { version = "0.19.0-1", optional = true }
serde = { version = "1", features = [ "derive" ], optional = true }

[dev-dependencies]
serde_json = "<1.0.45"
serde_test = "1"

[dependencies.grin_secp256k1zkp]
git = "https://github.com/mwcproject/rust-secp256k1-zkp"
version = "0.7.7"
features = ["bullet-proof-sizing"]
